Fix navbar on mobile and add contacts section

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,10 @@ p {
   font-family: "Montserrat", sans-serif;
 }
 
+.nav-link a:hover {
+  color: #ef463e;
+}
+
 nav .afterCollapsed {
   display: flex;
   flex-direction: row;
@@ -157,6 +161,25 @@ nav .afterCollapsed a.headerSocialLinks {
 }
 
 .projectsGrid a:hover {
+  color: #ef463e;
+}
+
+.contactSection {
+  margin: 5em;
+  padding: 5em;
+  background-color: #2d2d2d;
+}
+
+.contactHeader p {
+  font-size: 1.125em;
+}
+
+.contactLinks a {
+  text-decoration: none;
+  color: white;
+}
+
+.contactLinks a:hover {
   color: #ef463e;
 }
 
